--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
--i https://pypi.org/simple
-async-generator==1.10 ; python_version >= '3.5'
-attrs==22.2.0 ; python_version >= '3.6'
-certifi==2022.12.7 ; python_version >= '3.6'
-charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
-exceptiongroup==1.1.1 ; python_version >= '3.7'
-h11==0.14.0 ; python_version >= '3.7'
-idna==3.4 ; python_version >= '3.5'
-outcome==1.2.0 ; python_version >= '3.7'
-packaging==23.0 ; python_version >= '3.7'
-pysocks==1.7.1
-python-dotenv==1.0.0 ; python_version >= '3.8'
-requests==2.28.2 ; python_version >= '3.7' and python_version < '4'
-selenium==4.8.3
-sniffio==1.3.0 ; python_version >= '3.7'
+attrs==23.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+exceptiongroup==1.1.3
+h11==0.14.0
+idna==3.4
+outcome==1.3.0.post0
+packaging==23.2
+PySocks==1.7.1
+python-dotenv==1.0.0
+requests==2.31.0
+selenium==4.15.2
+sniffio==1.3.0
 sortedcontainers==2.4.0
-tqdm==4.65.0 ; python_version >= '3.7'
-trio==0.22.0 ; python_version >= '3.7'
-trio-websocket==0.10.2 ; python_version >= '3.7'
-urllib3[socks]==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-webdriver-manager==3.8.5
-wsproto==1.2.0 ; python_full_version >= '3.7.0'
+trio==0.23.1
+trio-websocket==0.11.1
+urllib3==2.1.0
+webdriver-manager==4.0.1
+wsproto==1.2.0
